fixed horizontal scroll issue on android web browser

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0;  }
+html,
+body {
+    height: 100%;
+    overflow-x: hidden;
+}
+
+body {
+    margin: 0;
+    position: relative;
+}
 
 
 
